fix: Remove false positive error with value validation
Signed-off-by: azerr <azerr@redhat.com>